--- a/_posts/BOJ/2022-07-01-BOJ_G3_16236.md
+++ b/_posts/BOJ/2022-07-01-BOJ_G3_16236.md
@@ -4,7 +4,7 @@ title: "BOJ_G3_16236"
 categories:
   - BOJ
 tags:
-  - [2022-07 CodingTest, BOJ, G3]
+  - [2022-07, CodingTest, BOJ, G3]
 sidebar:
   nav: "docs"
 ---
