--- a/_posts/BOJ/2022-07-01-BOJ_G5_16928.md
+++ b/_posts/BOJ/2022-07-01-BOJ_G5_16928.md
@@ -4,7 +4,7 @@ title: "BOJ_G5_16928"
 categories:
   - BOJ
 tags:
-  - [2022-07 CodingTest, BOJ, G5]
+  - [2022-07, CodingTest, BOJ, G5]
 sidebar:
   nav: "docs"
 ---
@@ -106,7 +106,7 @@ public class Main {
 처음에 뱀과 만나는 것은 무조건 안된다 라고 생각해서 dfs를 통해 뱀을 만나면 돌아가는 형식으로 했는데 답이 안나오길래 찾아보니 뱀이 거쳐서도 최소 경로가 존재해서 틀린 것이였다..<br>
 한마디로 문제 접근이 잘못된..<br>
 <br>
-그래서 찾아보니 bfs를 활용해 풀어냈다. 카운팅을 배열로 하여 저장해주는 것이 나는 생각하지 못한 방법이다..<br>
+그래서 찾아보니 bfs와 dp를 활용해 풀어냈다. 카운팅을 배열로 하여 저장해주는 것이 나는 생각하지 못한 방법이다..<br>
 
 - 전체 좌표, 방문처리 배열, 카운팅 배열을 생성한다.
 - bfs를 활용하여 queue에서 poll 한 것이 100이 되면 끝낸다.
