--- a/_posts/TIL/2022-07-10-220710_TIL.md
+++ b/_posts/TIL/2022-07-10-220710_TIL.md
@@ -22,4 +22,4 @@ sidebar:
 모바일이니 간편하게 학생들이 버스나 지하철에서 할 수 있을게 뭐가 있을까 라고 생각을 했다.<br>
 근데 ... 다 있다.. ㅋㅋㅋㅋ 읽어주는 것도 생각했고 아니면 재미만 주는 영상보다 도움이 되는 영상을 관리하는 플랫폼을 해볼까 생각했는데 그것도 큰 관심을 끌지 못할 것 같고 ... 뭔가 떠오르는 생각이 잘 없다..<br>
 내일부터 이제 일주일에 2번 대면활동을 하는데 뭔가 1학기 때와는 다른 삶이 진행될 것 같다..<br>
-1학기 때는 올 비대면이다 보니 좀 게으른 면도 있었고 그런데 2학기 때는 빡시게 !! cs공부, 프로젝트, 취업 준비 다 잘해보도록 하자 !!
+1학기 때는 올 비대면이다 보니 좀 게으른 면도 있었고 그런데 2학기 때는 빡시게 !! cs공부, 프로젝트, 취업 준비 다 잘해보도록 하자 !!<br>
