--- a/_posts/TIL/2022-08-03-220803_TIL.md
+++ b/_posts/TIL/2022-08-03-220803_TIL.md
@@ -12,9 +12,16 @@ sidebar:
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 
 - 프로젝트 진행
-  - ...JWT...
+  - 소셜 로그인 완료
+  - 문화유산 스크랩 완료
+  - 문화유산 리뷰 완료
+- CS_STUDY
+  - 이산수학 2 반
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
 
-후우.. 하루종일 JWT 달고 산다..<br>
-오늘 끝낸다.. 진짜..
+오늘 거의 API 기계였다.. ㅋㅋ DB를 느슨한 결합으로 하고 나니 아주 jpa가 쉬워지면서 너무 간단해졌다 ㅎㅎ<br>
+그래서 오늘 역대급으로 많이 만들고 기분도 아주 좋았다 ㅎㅎ<br>
+그래도 밤에 querydsl로 애를 좀 먹긴했지만 결국 해결해서 방법을 알았다. jpa + querydsl 이제 다 사용할 수 있다구 !!<br>
+단지 .. oneToMany 같은 관계형은 아직 사용 못하지만 .. 일단.. 스피드가 생명이잖소? ㅎㅎ<br>
+금욜에 끝낼 수 있도록 노력해보자 !!
