--- a/_posts/MATH/2022-08-03-220803_second.md
+++ b/_posts/MATH/2022-08-03-220803_second.md
@@ -81,3 +81,94 @@ sidebar:
   - 모든 부정 , 부분 부정
 - 중첩한정사
   - 필요한 경우에는 한 명제에서 두개 이상의 한정사를 사용할 수 있다.
+
+## <a style="color:#00adb5">연역법과 귀납법</a>
+
+- 추론
+  - 이미 '참'으로 알고 있는 명제로부터 새로운 '참'인 명제를 찾아내려고 하는 과정
+  - 전제 ( T ) -> 결론
+  - 과연 전제들이 다 T이면 결론도 T인가 ?
+  - 이 추론의 방법에는 2가지가 있다.
+    - <a style="color:red"><strong>연역법</strong></a>
+      - 형식 논리의 다음과 같은 명제의 틀에 기반을 두고 있다.
+      - if P, then Q
+      - P ( T ) -> Q ( T )
+      - ex ) 모든 사람이 죽는다 / 소크라테스는 사람이다 -> 그러므로 소크라테스는 죽는다.
+      - 전제가 T 이면 결론도 T 일수 밖에 없다.
+      - 함정은 전제가 과연 True인가 !!
+      - 수학의 이론은 연역법에 의해 만들어진 명제들로 이루어진다.
+    - <a style="color:red"><strong>귀납법</strong></a>
+      - 개별적인 사실을 말하는 명제들로부터 일반적인 결론을 도출하는 방법
+      - X -> Y 를 증명할 때 , X1 -> Y and X2 -> Y and X3 -> Y ,, 을 만족해야한다.
+      - 귀납법의 한계 : 집합의 모든 원소에 대해서 참인 것을 밝힐 수 없다. 그래서 확률적인 결론일 수 밖에 없다.
+      - <a style="color:red"><strong>수학적 귀납법은 이러한 귀납법의 한계를 극복</strong></a>
+
+## <a style="color:#00adb5">수학적 귀납법</a>
+
+- 기존 귀납법의 한계를 극복
+- <a style="color:red"><strong>집합의 모든 원소에 대해서 명제를 성립하는 것을 보여준다.</strong></a>
+- 따라서 모든 경우에 명제가 성립하는 것을 증명한다.
+
+- 구조
+  1. n=1 일 때 True임을 보여라.
+  2. n=k ( k>1 ) 일 때 True임을 보여라.
+  3. n=k+1 일때 True임을 보여라.
+     -> 모든 원소가 참임을 증명할 수 있다.
+
+## <a style="color:#00adb5">부울 대수와 논리회로 설계</a>
+
+- <a style="color:red"><strong>부울 대수 ( Boolean algebra )</strong></a>
+  - 정의
+    - 집합 S = { 0,1 } 에 대해 다음의 세가지 연산이 존재한다.
+    - <big>보수 ( Complement )</big>
+      - 0 -> 1, 1 -> 0
+      - "`" 로 표시
+    - <big>부울 합 ( boolean sum )</big>
+      - "+" 로 표시
+    - <big>부울 곱 ( boolean product )</big>
+      - "·" 로 표시, 생략 가능 ( AND )
+    - 연산 순서
+      - 보수 >> 곱 >> 합
+  - 부울 변수
+    - 집합 S = { 0, 1 } 의 원소 값만을 갖는 변수
+  - 부울 함수
+    - 0 또는 1의 입력값들에 대하여 0 또는 1의 출력값을 갖는 함수
+  - 부울 식
+    - 부울 변수 하나 하나가 부울 식이 된다.
+    - 보수, 합, 곱으로 구성된다.
+    - <a style="color:red"><strong>부울 함수</strong></a>는 부울 변수와 부울 연산자로 구성된 <a style="color:red"><strong>부울 식</strong></a>으로 표현할 수 있다.
+    - 항등
+      - 모든 입력 값에 대해 함수의 값이 같다면 동등하다고 한다.
+
+<br>
+
+- <a style="color:red"><strong>부울 대수의 법칙</strong></a>
+
+<center>
+<img width="60%" src="./../../images/boolean.png">
+</center>
+<br>
+
+- <a style="color:red"><strong>쌍대성의 원리 ( duality principle )</strong></a>
+
+  - 부울식으로 표현된 함수들 사이에 항등성이 유지되면, 이들의 쌍대도 항등성을 유지한다.
+  - 합 <-> 곱 , 0 <-> 1
+  - x+0=x <-> x·1=x 이 것 을 <a style="color:red"><strong>쌍 대</strong></a> 라 고 한 다.
+
+<br>
+
+- 최소항
+  - 함수의 모든 변수에 대해 부울 곱을 취한 것
+  - ex ) X1X2X3
+
+<br>
+
+- 최소항을 이용한 부울 식 ( 2가지 )
+
+  - <a style="color:red"><strong>논리합 형식</strong></a> - 부울 함수의 최소항들의 부울합으로 나타내는 형식 - 부울 함수의 값이 1이 되는 변수값의 조합들에 대하여 최소항들을 구한다.
+  <center>
+  <img width="60%" src="./../../images/booleanPlus.png">
+  </center>
+  <br>
+
+  - 카르노 맵
