--- a/_posts/TIL/2022-08-11-220811_TIL.md
+++ b/_posts/TIL/2022-08-11-220811_TIL.md
@@ -18,3 +18,10 @@ sidebar:
 - 프로그래머스\_기능개발
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+
+기능 개발을 끝내서 이제 내 휴대폰 가지고 안드로이드 테스트를 하며 사용자 입장에서 불편한 부분과 안드로이드 팀원들이 작업하면서 오류가 생기면 디버깅을 통해 오류를 해결하였다.<br>
+아직 안드로이드 부분이 좀 많이 남아 내가 비교적 할게 없어 .. 좀 답답한 느낌 ? ㅋㅋ 원래 같이 해야지 나는 안답답한데 나는 기다리고만 있으니까 뭔가 내가 도움이 되고 싶은 생각..이다...ㅎ<br>
+그래서 안드로이드 코드도 봤지만 .. 너무 새로운 걸 ? ㅋㅋ 자스랑 좀 비슷한가 싶다가도 문법이 아예 희한하게 튀어버린다.. 쉣..<br>
+그래서 오늘 원래 클라이언트 단에서 진행하려고 했던 정렬과 카테고리별 보여주는 기능을 API 설계를 통해 해결했다. 아주 뿌듯 ㅎㅎ<br>
+그리고 CS 공부도 하고 오랜만에 코딩문제도 풀었는데 쉽게 안풀렸지만 답을 안보고 끝까지 해서 결국 풀어냈다. 아주 뿌듯 ㅎㅎ<br>
+내일은 UCC 좀 보면서 5분대기조 역할과 함께 어떻게 UCC를 찍을지 고민해 봐야겠다 !!
