--- a/_posts/MATH/2022-08-03-220803_second.md
+++ b/_posts/MATH/2022-08-03-220803_second.md
@@ -172,3 +172,25 @@ sidebar:
   <br>
 
   - 카르노 맵
+    - 부울 함수의 간단한 논리합 형식을 찾아내는 방법
+    - 인접된 항의 공통된 인수를 가지고 더 간단히 나타낼 수 있다.
+    - 변수가 2개 이면 2\*1
+    - 변수가 3개 이면 4\*2
+    - 변수가 4개 이면 4\*4
+    - 표는 원통형으로 생각해야한다.
+
+- <a style="color:red"><strong>논리회로 설계</strong></a>
+
+- 게이트와 부울 연산
+  - 전자 장치의 입력과 출력은 0 또는 1이기 때문에 전자 회로를 설계하는데 부울 대수를 사용할 수 있다.
+  - 게이트 : 회로의 기본 요소
+  - 게이트 : 부울 연산
+  - 인버터 : 보수
+  - OR 게이트 : 부울 합
+  - AND 게이트 : 부울 곱
+- 부울식은 논리 회로로 표현할 수 있다.
+
+<br>
+
+- 논리회로 설계
+  - 문제 -> 입력과 출력 정의 부울 함수 -> 부울식 ( 논리식 ) -> 논리 회로
