--- a/_posts/WEB/2022-07-18-restful.md
+++ b/_posts/WEB/2022-07-18-restful.md
@@ -2,9 +2,9 @@
 layout: single
 title: "RESTFUL"
 categories:
-  - STUDY
+  - WEB
 tags:
-  - [2022-07, STUDY, RESTFUL]
+  - [2022-07, WEB, RESTFUL, SPRINGBOOT, BACKEND]
 sidebar:
   nav: "docs"
 ---
