--- a/_posts/PROGRAMMERS/2022-04-29-PROGRAMMERS_Lv1_1845.md
+++ b/_posts/PROGRAMMERS/2022-04-29-PROGRAMMERS_Lv1_1845.md
@@ -1,12 +1,12 @@
 ---
 layout: single
-title:  "PROGRAMMERS_Lv1_폰켓몬"
-categories: 
-    - PROGRAMMERS
-tags: 
-    - [2022-04, CodingTest, PROGRAMMERS, Lv1]
+title: "PROGRAMMERS_Lv1_폰켓몬"
+categories:
+  - PROGRAMMERS
+tags:
+  - [2022-04, CodingTest, PROGRAMMERS, Lv1]
 sidebar:
-    nav: "docs"
+  nav: "docs"
 ---
 
 # 📁 <b><a style="color:#00adb5" href="https://programmers.co.kr/learn/courses/30/lessons/1845" target=_blank>[Lv1_1845] 폰켓몬</a></b>
@@ -17,26 +17,16 @@ import java.util.*;
 class Solution {
     public int solution(int[] nums) {
         int answer = 0;
-        
-        ArrayList<Integer> list = new ArrayList<Integer>();
-        
-        // arraylist 사용해서 만약 이미 폰켓몬 종류를 포함하고 있으면 통과 , 아니면 list에 입력
+
+        HashSet<Integer> set = new HashSet<Integer>();
+
+        // HashSet을 이용해서 중복 제거
         for(int i=0; i<nums.length; i++){
-            if(list.contains(nums[i])){
-                continue;
-            }else{
-                list.add(nums[i]);
-            }
+            set.add(nums[i]);
         }
-        
-        // 만약 list 사이즈가 폰켓몬을 가질 수 있는 최대 사이즈 보다 크다면 폰켓몬을 가질 수 있는 최대 사이즈가 정답
-        if(list.size()>(nums.length/2)){
-            answer = nums.length/2;
-        }
-        // 아니면 list 크기가 정답
-        else{
-            answer = list.size();
-        }
+
+        // 만약 set의 크기가 nums.length보다 작다면 set이 정답, 아니면 nums.length가 정답
+        answer = set.size() < nums.length ? set.size() : nums.length;
 
         return answer;
     }
@@ -44,6 +34,7 @@ class Solution {
 ```
 
 ## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
+
 처음에.. 밑에 사진처럼 분석을 하고 문제를 풀었는데.. 역시 예상한대로 시간초과가 떴다..<br>
 그래서 어떻게 하면 시간을 줄일까.. 하다가 가지치기도 해보고 생각을 해봤지만 도저히 떠오르지가 않아서 답을 봤는데.. 허 참 ㅋㅋㅋ<br>
 이건 너무 과한생각이였다..<br>
@@ -51,9 +42,12 @@ class Solution {
 사실 어떻게 보면 접근 방법이 틀렸던 건데.. 너무 조순부에 잡혀있었던게 아닌가 싶다.<br>
 아쉬운 판단을 한 문제다.. ㅠ <br>
 다음에 다시 풀어보도록 하자
+<br><br>
+<big>2022.08.24</big><br>
+다시 문제를 보고 풀어보았다. HashSet을 활용해 문제를 푸니 너무 간단하게 풀리는... ㅋㅋ 괜히 Lv1이 아니였다.<br>
+먼저 문제를 파악하고 구해야하는 것을 알면 빠르게 풀 수 있을 것 같다.
 
 <br>
 <center>
     <img width="80%" src="./../../images/1845.jpg">
 </center>
-
