--- a/_posts/TIL/2022-08-24-220824_TIL.md
+++ b/_posts/TIL/2022-08-24-220824_TIL.md
@@ -16,3 +16,9 @@ sidebar:
 - 블록체인 STUDY ( 동기화 작업 , 강의 1 정리 )
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+
+오늘 하루종일 공통 프로젝트 발표를 듣고 저녁에는 공통 프로젝트 팀원들과 프로젝트 회고를 하며 Git에 어느정도 정리를 하였다. 좀 더 손을 봐야하지만 그래도 정리 한 번 해놓으니 맘이 편하군..<br>
+그리고 퍼블릭 이더리움 네트워크인 롭슨을 활용하기 위해 동기화가 필요한데 .. 이 과정이 참 길고도 긴 것 같다 ㅋㅋ<br>
+light한 방법이 있다고 조교님이 가르쳐 주셨는데 그것은 우리 팀원의 결과상 되지 않는 것으로 판단되어 그냥 원래 방법대로... 8시간 10시간 걸리는 방법대로 해야한다. 이게 발목을 잡을 줄이야. 그래서 그다음 진도는 나가지 못하고 1회차 강의를 정리했다. 정리하고 나니 어느정도 머리에 구조가 박히는 것 같아 좋다 ㅎㅎ<br>
+비록 코테나 CS 공부 자소서 아무것도 하지 못했지만 일단은 블록체인도 급하기 때문에 ... 화이팅 !<br>
+내일은 하루종일 공부하는 날이니 동기화가 다 되면 블록체인 공부를 하고 안되면 코테나 CS, 자소서를 작성해야겠다.
