--- a/_posts/STUDY/2022-08-24-ethereum.md
+++ b/_posts/STUDY/2022-08-24-ethereum.md
@@ -10,7 +10,7 @@ sidebar:
 ---
 
 <center>
-<img width="90%" src="./../../images/ethereum.png">
+<img width="90%" src="./../../images/ethereum.PNG">
 </center>
 <br>
 
@@ -19,7 +19,7 @@ sidebar:
 ## <a style="color:#00adb5">Ethereum</a> 이란 무엇인가
 
 - <a style="color:red"><strong>스마트 컨트랙트를 구현한 블록체인 플랫폼</strong></a>이다.
-- <big>스마트 컨트랙트</big> 만을 위한 <a style="color:red"><strong>언어 ( Solidity, LLL 등 )</strong></a> 을 개발하고 이를 실행시키기 위한 <a style="color:red"><strong>가상 머신 ( EVM, Ethereum Virtual Machine )</strong></a> 도 제장하였다.
+- <big>스마트 컨트랙트</big> 만을 위한 <a style="color:red"><strong>언어 ( Solidity, LLL 등 )</strong></a> 을 개발하고 이를 실행시키기 위한 <a style="color:red"><strong>가상 머신 ( EVM, Ethereum Virtual Machine )</strong></a> 도 제작하였다.
 - 비트코인에서는 반복문이 동작할 수 없는 튜링 불완전한 스택 기반의 스크립트 언어라면 이더리움의 스마트 컨트랙트는 반복문을 포함하여 좀 더 복잡한 로직을 구성할 수 있는 <a style="color:red"><strong>튜링 완전 언어</strong></a>를 사용한다.
 - 비트코인의 블록체인을 확장하여 <a style="color:red"><strong>탈중앙화된 응용 프로그램 ( dApps ) 이 블록체인상에서 구동 될 수 있는 구조</strong></a>를 가지고 있다.
 - 하나의 암호화폐가 하나의 블록체인에서만 거래되던 기존의 패러다임을 <a style="color:red"><strong>여러개의 암호화폐가 하나의 블록체인에 거래될 수 있도록 한 블록체인</strong></a>이다.
@@ -63,7 +63,7 @@ sidebar:
 ## <a style="color:#00adb5">이더리움 네트워크 개념도</a>
 
 <center>
-<img width="70%" src="./../../images/eth_network.png">
+<img width="70%" src="./../../images/eth_network.PNG">
 </center>
 <br>
 
@@ -163,7 +163,7 @@ sidebar:
 - <a style="color:red"><strong>비대칭키 암호화</strong></a>
 
   <center>
-  <img width="70%" src="./../../images/ethKey.png">
+  <img width="70%" src="./../../images/ethKey.PNG">
   </center>
   <br>
 
@@ -195,16 +195,18 @@ sidebar:
   ```
 
   - 가나슈 구동 화면
-  <img width="70%" src="./../../images/ganache.png">
-  </center>
-  <br>
+
+    <img width="70%" src="./../../images/ganache.PNG">
+
+    <br>
 
 - <big>Geth로 네트워크 접속</big>
 
   - 구조
-  <img width="70%" src="./../../images/ganache-cli.png">
-  </center>
-  <br>
+
+    <img width="70%" src="./../../images/ganache-cli.PNG">
+
+    <br>
 
   - Geth 명령어로 가나슈 테스트넷에 접속 ( 새 cmd )
 
