--- a/_posts/STUDY/2022-08-24-ethereum.md
+++ b/_posts/STUDY/2022-08-24-ethereum.md
@@ -10,7 +10,7 @@ sidebar:
 ---
 
 <center>
-<img width="90%" src="./../../images/ethereum.PNG">
+<img width="90%" src="./../../images/ethereum.png">
 </center>
 <br>
 
@@ -81,6 +81,7 @@ sidebar:
   - 윈도우 소프트웨어를 위한 머신 수준의 명령 줄 패키지 관리자 이자 인스톨러이다.
   - 참고 링크 : <a href="https://chocolatey.org/install">https://chocolatey.org/install</a>
   - Powershell에 설치 명령 ( 관리자로 실행 )
+
   <img width="70%" src="./../../images/chocolatey.png">
   </center>
   <br>
