--- a/_posts/STUDY/2022-08-24-ethereum.md
+++ b/_posts/STUDY/2022-08-24-ethereum.md
@@ -59,6 +59,7 @@ sidebar:
 
 - <a style="color:red"><strong>Test용, 실습용</strong></a>
 - 실제로 이더가 왔다갔다 하지만 메인넷처럼 Valuable 한 이더를 교환하는 것이 아닌 개인적으로 마음껏 이더를 채굴하고 스마트 컨트랙트를 배포할 수있고 이더를 거래할 수 있는 환경이다.
+- 진정한 의미의 블록체인 X
 
 ## <a style="color:#00adb5">이더리움 네트워크 개념도</a>
 
@@ -83,7 +84,6 @@ sidebar:
   - Powershell에 설치 명령 ( 관리자로 실행 )
 
   <img width="70%" src="./../../images/chocolatey.png">
-  </center>
   <br>
 
   - 사전 필요 요소 설치
@@ -119,8 +119,13 @@ sidebar:
 
 - <big>ganache 설치</big>
 
-  - ganache ( 가나슈 ) - <a style="color:red"><strong>이더리움 개발 툴</strong></a> - 로컬PC내에 이더리움 블록체인 가상 네트워크를 생성 - 스마트 계약 트랜젝션 송신 가능 - MetaMask 지갑으로 송금가능 - Ganache와 MetaMask 연동으로 이더리움 블록체인 개발 가능
-    <br>
+  - ganache ( 가나슈 )
+    - <a style="color:red"><strong>이더리움 개발 툴</strong></a>
+    - 로컬PC내에 이더리움 블록체인 가상 네트워크를 생성
+    - 스마트 계약 트랜젝션 송신 가능
+    - MetaMask 지갑으로 송금가능
+    - Ganache와 MetaMask 연동으로 이더리움 블록체인 개발 가능
+      <br>
   - node.js 설치
 
     - powershell 에서 설치
