--- a/_posts/STUDY/2022-08-24-ethereum.md
+++ b/_posts/STUDY/2022-08-24-ethereum.md
@@ -40,6 +40,16 @@ sidebar:
   - 비트코인은 '소비되지 않은 거래 출력 ( 잔액 )' , 즉 UTXO ( Unspent Transaction Output )를 기반으로 한다. 즉 <a style="color:red"><strong>암호화폐 중심</strong></a> 으로 관리
   - 이더리움은 '사용자 계정' 에 기반하여 암호화폐를 관리한다. 즉 <a style="color:red"><strong>사용자 중심</strong></a> 으로 관리
 
+## <a style="color:#00adb5">이더리움 클라이언트 종류</a>
+
+- geth ( 81.1% )
+- openethereum
+- parity-ethereum
+- nethermind
+- coregeth
+- besu
+- parity
+
 ## <a style="color:#00adb5">이더리움 블록체인 네트워크 분류</a>
 
 ### <a style="color:#00adb5">Public Network</a> 퍼블릭 네트워크
