--- a/_posts/TIL/9/2022-09-19-220919_TIL.md
+++ b/_posts/TIL/9/2022-09-19-220919_TIL.md
@@ -11,7 +11,15 @@ sidebar:
 
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 
-- 발표
+- 프로젝트
+  - 발표
+  - API 설계
 - 자소서 작성
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+
+오늘은 사업장에서 중간 발표가 있는 날이었다. 벌써 총 프로젝트 기간의 반을 넘은 시간이다..<br>
+시간이 너무 빠르네.. 오늘 발표자 팀원이 몸이 안좋아서 걱정했지만 다행히 잘 발표를 마쳤고 이번 프로젝트는 결식아동을 위한 프로젝트라 기획배경이 아주 탄탄해서 좋았다.<br>
+그리고 API도 거의 다 완성한 것 같다. 내일까지 남은 것하고 한 번 다 체크하고 더미 데이터만 만들면 Back으로서 담당은 끝 !<br>
+웹 FE를 조금 해야한다 ㅠ ㅋㅋ<br>
+그리고 마지막 주에는 좀 더 다양한 기능들을 해보려고 한다. 시간이 된다면 ..ㅎㅎ
