--- a/_posts/TIL/9/2022-09-22-220922_TIL.md
+++ b/_posts/TIL/9/2022-09-22-220922_TIL.md
@@ -12,10 +12,15 @@ sidebar:
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 
 - 프로젝트
-
   - Back 수정
 
 - 자소서 작성
 - BOJ_19941
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+
+오늘 원래 계획은 Vue를 이용해 FE를 하는 거였는데 생각한 것보다 Back 수정이 많이 들어와서 시작도 못했다..ㅋㅋ<br>
+뭔가 설계 때 더 꼼꼼히 해야하겠구나라는 생각을 한 번 더 하게되는?<br>
+그래도 백은 진짜 거의 끝인 것 같아 다행이다.. 그리고 자소서쓰고 하나 제출하고.. 이번에는 좀 기업의 특징을 많이 말한 것 같아 다행이다.<br>
+확실히 쓰면 쓸수록 느는거 같기도 하고 아닌 것 같기도 하고?<br>
+오랜만에 코테도 하나 풀었다 ㅎㅎ 오랜만에 푸는 거라 쉬운 것 풀었는데 생각한 것보다 잘 풀려서 기분이 귣~ 
