--- a/_posts/TIL/9/2022-09-22-220922_TIL.md
+++ b/_posts/TIL/9/2022-09-22-220922_TIL.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "2022.09.22.THU_TIL"
+title: "2022.09.23.FRI_TIL"
 categories:
   - TIL
 tags:
@@ -12,15 +12,16 @@ sidebar:
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 
 - 프로젝트
-  - Back 수정
+  - Vue.js 이용해 판매자 정보, 수정 페이지 완성
+  - Thymeleaf 활용해 SSR 구현
 
-- 자소서 작성
-- BOJ_19941
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
 
-오늘 원래 계획은 Vue를 이용해 FE를 하는 거였는데 생각한 것보다 Back 수정이 많이 들어와서 시작도 못했다..ㅋㅋ<br>
-뭔가 설계 때 더 꼼꼼히 해야하겠구나라는 생각을 한 번 더 하게되는?<br>
-그래도 백은 진짜 거의 끝인 것 같아 다행이다.. 그리고 자소서쓰고 하나 제출하고.. 이번에는 좀 기업의 특징을 많이 말한 것 같아 다행이다.<br>
-확실히 쓰면 쓸수록 느는거 같기도 하고 아닌 것 같기도 하고?<br>
-오랜만에 코테도 하나 풀었다 ㅎㅎ 오랜만에 푸는 거라 쉬운 것 풀었는데 생각한 것보다 잘 풀려서 기분이 귣~ 
+ 오늘을 프로젝트 관련해서 많이 진행했다.<br>
+ 간트차트에는 약 2~3일로 잡아놓은 Vue 작업을 다른 팀원들이 이미 다른 기능을 많이 구현해놔서 그 코드를 활용해 빨리 끝냈다.<br>
+ 만약 코드가 없었으면 이렇게 빨리 못 끝냈을듯..ㅋㅋ<br>
+ 그리고 점점 코드 해석력? 도 느는 것 같아 아주 귣~이다<br>
+ 또 모바일 환경에서 html 파일을 띄워주는 것을 서버에서 진행해야 하는데 이것을 Thymeleaf를 활용해서 SSR을 구현했다.<br>
+ SSR은 '서버에서 사용자에게 보여줄 페이지를 모두 구성하여 사용자에게 페이지를 보여주는 방식' 이다. 자꾸 오류가 나길래 왜이러지 하는데 ... 보니까 gradle 설정에서 framework인데 framwork라고 오타가.... 왜 자꾸 설정이 안먹나했다.. 이거가지고 이틀을 ㅋㅋㅋ 하아 <br>
+ 그래도 이번 기회에 어떻게 사용하는지 확실히 안 것 같아 다행이다..ㅎ
