--- a/_posts/TIL/9/2022-09-24-220924_TIL.md
+++ b/_posts/TIL/9/2022-09-24-220924_TIL.md
@@ -17,3 +17,6 @@ sidebar:
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
 
+다음 주 제출할 자소서를 하나 다 작성하고 오랜만에 코딩 문제를 풀었다.<br>
+실버 2문제를 풀었는데 잘 풀려서 만족스러웠다.<br>
+내일도 자소서와 코테 문제를 푸는 시간을 가져야겠다. 그리고 시간 되면 포트폴리오 정리도 하는 걸로
