--- a/_posts/TIL/10/2022-10-07-221007_TIL.md
+++ b/_posts/TIL/10/2022-10-07-221007_TIL.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "2022.10.06.THU_TIL"
+title: "2022.10.07.FRI_TIL"
 categories:
   - TIL
 tags:
@@ -11,16 +11,15 @@ sidebar:
 
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 
-- UCC 편집
-- 프로젝트 수정
+- 프로젝트 발표
+- 프로젝트 회고
 
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
 
-내일 발푠데.. 갑자기 제공받은 이더리움 네트워크가 터졌다.. 밤에.. ㅋㅋ<br>
-그래서 어떠한 대처도 못해서 private network를 다시 구현해야하나 하고 있는데 다행히 다른 조 팀이 구현해 놓은 것이 있어 빌리게 되었다..<br>
-정말 생명의 은인..수준.. 후우..<br>
-그러고도 할 일이 좀 많아서 UCC 편집하고 포팅 메뉴얼 BE 만들고 DB 데이터 수정하고 ... 마무리 작업을 다하니 새벽3시..ㅋㅋㅋ<br>
-그리고 코치님께 피드백 받고 나서도 발표 방향을 아예 바꿨다.<br>
-원래는 기능설명 위주였는데 오히려 상황극 식으로 실제 사용하는 것을 보여주면 더 좋다고 하셔서 바꿨는데 우리 팀원 발표자 형이 진짜 너무 잘해줘서... 대박이였다 ㅋㅋ<br>
-후우 힘든 하루 지만 내일 성공적인 발표를 위해 불태웠따 !! 화이팅
+너무 성공적인 발표였다..<br>
+진짜.. 우리 팀원들 쵝오.. 발표 끝나고 프로젝트 회고하면서 얘기하는데 상 받을 팀은 우리밖에 없다고 ㅋㅋ<br>
+9 to 6 지키면서 휴일 쉴거 다 쉬고 했는데 이런 결과가 나와서 너무 기쁘면서도 팀 분위기가 얼마나 중요한지 느낄 수 있는 프로젝트 였다.<br>
+회고 하면서도 다들 칭찬들 밖에 없고 ㅋㅋㅋ 너무 만족스러운 프로젝트 였다. 다시 이런 팀을 못 만날 것 같은? <br>
+아주 알잘딱깔센의 표본들.. ㅎㅎ 결국 저녁에 확인하니 상을 받게 되었고 다음주 수요일 발표 준비를 해야한다 ㅎㅎ<br>
+그리고 자율은 기업연계가 떨어졌다..ㅠ 모바일 반에 줘야하는거 아냐? 앱 프로젝튼데..? 너무 슬프지만 공통 때 상을 받아서 만족스러운 하루였다 ~
