--- a/_posts/TIL/10/2022-10-09-221009_TIL.md
+++ b/_posts/TIL/10/2022-10-09-221009_TIL.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "2022.10.06.THU_TIL"
+title: "2022.10.09.SUN_TIL"
 categories:
   - TIL
 tags:
@@ -11,16 +11,14 @@ sidebar:
 
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 
-- UCC 편집
-- 프로젝트 수정
-
+- PRO_42578
+- HashMap 정리
+- 자소서 작성
+- 면접 준비
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
 
-내일 발푠데.. 갑자기 제공받은 이더리움 네트워크가 터졌다.. 밤에.. ㅋㅋ<br>
-그래서 어떠한 대처도 못해서 private network를 다시 구현해야하나 하고 있는데 다행히 다른 조 팀이 구현해 놓은 것이 있어 빌리게 되었다..<br>
-정말 생명의 은인..수준.. 후우..<br>
-그러고도 할 일이 좀 많아서 UCC 편집하고 포팅 메뉴얼 BE 만들고 DB 데이터 수정하고 ... 마무리 작업을 다하니 새벽3시..ㅋㅋㅋ<br>
-그리고 코치님께 피드백 받고 나서도 발표 방향을 아예 바꿨다.<br>
-원래는 기능설명 위주였는데 오히려 상황극 식으로 실제 사용하는 것을 보여주면 더 좋다고 하셔서 바꿨는데 우리 팀원 발표자 형이 진짜 너무 잘해줘서... 대박이였다 ㅋㅋ<br>
-후우 힘든 하루 지만 내일 성공적인 발표를 위해 불태웠따 !! 화이팅
+다시 구미로 와서 자소서 작성할 것 큰 틀만 짜고, 코테를 풀었다.<br>
+Hash 문제를 풀었는데 풀면서 관련 문법이 좀 약하다고 생각해서 HashMap을 정리하며 다시 개념을 정립시켰다.<br>
+오늘 좀 많은 것을 하려고 했으나 계획보다 늦게 집에 와서 많이 못했다 ㅜㅜ <br>
+내일은 특화 프로젝트 팀원들 만나서 다음주 지역 발표 준비를 하는데 잘 준비해서 좋은 결과를 받도록 해야겠다.
