--- a/_posts/TIL/10/2022-10-14-221014_TIL.md
+++ b/_posts/TIL/10/2022-10-14-221014_TIL.md
@@ -18,7 +18,9 @@ sidebar:
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
 
-계속해서 회의하는데 주제가 쉽게 안나온다..<br>
-모바일이라는 특성을 이용해 AR을 사용하는 것으로 약간 가닥이 잡히긴 했는데 아직 어떤 기능을 주로 할지는 못정한 상태..<br>
-더 생각을 해봐야 하지만 빨리 나오면 나올 수록 좋아서 생각을 계속 해봐야 겠다.<br>
-그리고 첫 면접 준비를 하는데 이것도 여간 쉬운게 아니다. 약간 너무 막막해서 시작을 막 못하겠는.. 일단 오늘 질문지를 다 완성하고 내일 1차 검사라도 받아보자 ! 
+오늘 어느정도 주제를 정했다. 일단 기술은 모바일 AR 기술을 활용할 것 같고 AR 캐릭터를 활용해 재미있는 여행 SNS를 만들 것 같다.<br>
+기능도 나열해 봤는데 볼륨도 괜찮은 것 같고.. 사회공헌은 없지만 ㅋㅋㅋ 어쩔 수 없다.. 뭔가 주제로는 독도팀이 너무 압도적인데 ㅋㅋ<br>
+2반에 너무 엘리트들이 많아서..ㅎㅎ 상은 기대 놉..<br>
+그리고 저녁에 cs 기본 하고 면접 대답 준비했는데 후우 시뮬레이션으로 혼자 해보는데 말문이 턱 막힌다..ㅋㅋ<br>
+운칠기삼이라는데 일단 남은 기간동안 준비 열심히 해야겠다.<br>
+일요일 코테 준비할 겸 코테 문제도 풀어보았다.
