--- a/_posts/PROGRAMMERS/2022-10-26-PROGRAMMERS_Lv1_81301.md
+++ b/_posts/PROGRAMMERS/2022-10-26-PROGRAMMERS_Lv1_81301.md
@@ -29,5 +29,6 @@ sidebar:
 ## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 
 replace 함수가 중요했던 문제.<br>
+replace를 사용하면 알아서 찾아서 바꿔주는 줄 몰랐네..ㅎ;<br>
 String 배열 nums에 숫자에 맞는 문자열들을 넣고 문자열 함수 replace를 사용해서 다 숫자로 바꿔주면 된다.<br>
 처음에 charAt을 이용해서 다 구해줄려고 했는데 replace를 사용해야 하는 것을 알고 replace로 간단하게 풀었다.<br>
