--- a/_posts/PROGRAMMERS/2022-11-01-PROGRAMMERS_Lv2_86971.md
+++ b/_posts/PROGRAMMERS/2022-11-01-PROGRAMMERS_Lv2_86971.md
@@ -81,3 +81,6 @@ sidebar:
 
 ## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 
+완탐 + bfs 문제로 풀었는데 너무 오래걸렸다.<br>
+포인트는 하나의 줄을 끊었을 때 2개로 나뉘는 것과 하나의 부분만 구해주고 나머지는 전체값에서 구해준 횟수를 빼주면 된다.<br>
+그리고 bfs 탐색하는 시작점도 start 부분을 모두 탐색하는 것 
