--- a/_posts/TIL/11/2022-11-08-221108_TIL.md
+++ b/_posts/TIL/11/2022-11-08-221108_TIL.md
@@ -19,7 +19,7 @@ sidebar:
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
 
-오늘도 데이터 라벨링하고 학습시켰따다. 드디어 안드로이드에서 원하는 output을 찾았다.. 11개의 행을 가진 csv 파일..후우<br>
+오늘도 데이터 라벨링하고 학습시켰다. 드디어 안드로이드에서 원하는 output을 찾았다.. 11개의 행을 가진 csv 파일..후우<br>
 그래서 테스트 해보니 인식을 한다아아 !!<br>
 이제 라벨링만 다하고 외부 4개, 내부 4개 진행하고 학습시키고 tflite file을 export 하면 AI를 완성할 수 있을 것 같다.<br>
 비록 노가다 작업이지만 전체적으로 돌아가는 구조를 알게되어서 유익했던 것 같다. 프로젝트 끝날 때까지 잘 처리해보자.
